# curio

./: .gitignore  SIMULATION.md
curio_description/: CMakeLists.txt  package.xml
curio_description/launch/: display_curio.launch.py
curio_description/urdf/: curio.urdf  curio_laser.xacro  double_tricycle.urdf  rplidar_s2.urdf
curio_gazebo/: CMakeLists.txt  package.xml
curio_gazebo/config/: curio_controller.yaml  dtricycle_drive_controller.yaml
curio_gazebo/launch/: curio_empty_world.launch.py  curio_gazebo.launch.py  curio_mars_world.launch.py  curio_maze_world.launch.py  curio_shapes_world.launch.py  dbl_tricycle.launch.py  gazebo.launch.py
curio_gazebo/src/: curio_controller.cpp
curio_gazebo/worlds/: empty.world  mars_curiosity.world  maze.world  shapes.world
curio_gazebo/worlds/models/curiosity_path/: model.sdf
curio_navigation/: CMakeLists.txt
curio_navigation/config/: amcl.yaml
curio_navigation/launch/: amcl.launch.py
curio_viz/: CMakeLists.txt  package.xml
curio_viz/launch/: view_model.launch.py
curio_viz/rviz/: model.rviz
