<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>curio_description</name>
    <version>0.2.3</version>
    <description>URDF and meshes for Curio, a Sawppy Rover</description>
    <maintainer email="rhys.maiwaring@me.com">Rhys Mainwaring</maintainer>
    <license>BSD-3-Clause</license>
    <url type="website">https://github.com/srmainwaring/curio</url>
    <url type="repository">https://github.com/srmainwaring/curio</url>
    <url type="bugtracker">https://github.com/srmainwaring/curio/issues</url>
    <author email="rhys.maiwaring@me.com">Rhys Mainwaring</author>
    <buildtool_depend>ament_cmake</buildtool_depend>
    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>
    <exec_depend>robot_state_publisher</exec_depend>
    <exec_depend>joint_state_publisher</exec_depend>
    <exec_depend>rviz2</exec_depend>
    <exec_depend>xacro</exec_depend>

    <export>
    <build_type>ament_cmake</build_type>
    </export>
</package>
