<?xml version="1.0"?>
<package format="3">
    <name>curio_gazebo</name>
    <version>0.2.3</version>
    <description>Gazebo simulation launch files for Curio, a Sawppy Rover.</description>
    <maintainer email="rhys.mainwaring@me.com">Rhys Mainwaring</maintainer>
    <license>BSD-3-Clause</license>
    <url type="website">https://github.com/srmainwaring/curio</url>
    <url type="repository">https://github.com/srmainwaring/curio</url>
    <url type="bugtracker">https://github.com/srmainwaring/curio/issues</url>
    <author email="rhys.mainwaring@me.com">Rhys Mainwaring</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <depend>curio_description</depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
